--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>🏨 Hotel Room Manager</h1>
-    <div class="main">
-      <div id="room-grid" class="grid"></div>
-      <div class="sidebar">
-        <h2>Occupied Rooms</h2>
-        <ul id="occupied-list"></ul>
-      </div>
-    </div>
-  </div>
+  <h1>🏨 Hotel Room Manager</h1>
+
+  <div id="room-grid" class="room-grid"></div>
+
+  <h2>🛏️ Occupied Rooms</h2>
+  <ul id="occupied-list" class="occupied-list"></ul>
+
   <script src="script.js"></script>
 </body>
 </html>
